2014-12-30  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/xref.el (xref-find-definitions): Mention "no
	identifier at point" case in the docstring.

	* menu-bar.el (menu-bar-goto-uses-etags-p): New function.
	(menu-bar-goto-menu): Use it to show or hide the `set-tags-name'
	and `separator-tag-file' items.

2014-12-29  Paul Eggert  <eggert@cs.ucla.edu>

	* obsolete/pc-select.el (pc-selection-mode): Use system-type.
	This is instead of system-name, which is both wrong here and obsolete.

2014-12-29  Dmitry Gutov  <dgutov@yandex.ru>

	* menu-bar.el (menu-bar-next-tag-other-window)
	(menu-bar-next-tag): Remove.

2014-12-29  K. Handa  <handa@gnu.org>

	* international/mule.el (make-translation-table-from-alist):
	Accept nil or zero-length vector for FROM and TO.

2014-12-29  Lars Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-mode): Truncate overlong lines for prettier
	display when resizing.

	* net/shr.el (shr-width): Default to using the window width when
	rendering.

2014-12-29  Dmitry Gutov  <dgutov@yandex.ru>

	Unbreak jumping to an alias's definition.

	* emacs-lisp/find-func.el (find-function-library): Return a pair
	(ORIG-FUNCTION . LIBRARY) instead of just its second element.
	(find-function-noselect): Use it.

	* progmodes/elisp-mode.el (elisp--xref-identifier-file): Rename to
	`elisp--xref-identifier-location', incorporate logic from
	`elisp--xref-find-definitions', use the changed
	`find-function-library' return value.

2014-12-29  Juri Linkov  <juri@linkov.net>

	* comint.el (comint-history-isearch-message): Use field-beginning
	instead of comint-line-beginning-position - that's more fixes for
	http://lists.gnu.org/archive/html/emacs-devel/2014-12/msg00305.html
	(comint-history-isearch-message): Fix args of isearch-message-prefix.

2014-12-29  Juri Linkov  <juri@linkov.net>

	* vc/vc-dir.el (vc-dir-display-file): New command (bug#19450).
	(vc-dir-mode-map): Bind it to "\C-o".
	(vc-dir-menu-map): Add it to menu.
